# Soccernet-depth-estimation-solution

./: .gitignore  README.md  challenge.py  complete_run_distributed.slurm  evaluate_depth.py  pyproject.toml  train.py  train.sh
data/: soccernet_mde.py  utils.py
loss/: losses.py  utils.py
metrics/: evaluation.py  metrics_challenge.py
models/DAv2/: app.py  run.py  run_video.py
models/DAv2/depth_anything_v2/: dpt.py
models/DAv2/relative_depth/: config.py  loss.py  metrics.py  model.py  train.py  train_utils.py
train_config/: build_model.py  config.py  parser_config.py  train_utils.py
